# compose

./: .gitignore  AGENTS.md  Cargo.toml  PERF.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.bench.config.ts  vitest.browser.config.ts
.claude/: launch.json  settings.json
.claude/hooks/: guard-worktree-remove.py
crates/agent-harness/: Cargo.toml  README.md
crates/agent-harness/src/: events.rs  lib.rs  process.rs  registry.rs
crates/bob-api/: Cargo.toml
crates/bob-api/src/: main.rs
crates/bob-core/: Cargo.toml  README.md
crates/bob-core/src/: install.rs  lib.rs  run.rs
crates/bob-rs/: Cargo.toml  README.md
crates/bob-rs/src/: install.rs  lib.rs  run.rs
crates/cli-stream/: Cargo.toml
crates/compose-core/: Cargo.toml
crates/compose-core/src/: claude.rs  codex.rs  events.rs  lib.rs
crates/compose-harness/: Cargo.toml
crates/compose-harness/src/: lib.rs
crates/harness/bob/: Cargo.toml  README.md
crates/harness/bob/src/: lib.rs  parser.rs
crates/harness/claude/: Cargo.toml  README.md
crates/harness/claude/src/: lib.rs
crates/harness/codex/: Cargo.toml  README.md
crates/harness/codex/src/: lib.rs
crates/harness/core/: Cargo.toml  README.md
crates/harness/core/src/: events.rs  harness.rs  lib.rs  process.rs
crates/workspace-index/: Cargo.toml
crates/workspace-index-wasm/: Cargo.toml
crates/workspace-index-wasm/src/: lib.rs
crates/workspace-index/src/: lib.rs
crates/workspace-index/tests/: search_bench.rs  search_eval.rs
docs/: bob Shell Details.md  bob shell help docs.md  editor-guide.md  ipc-guide.md  positioning.md  review-guide.md  spec.md  vellum-local-first-production-spec-v3.2.md
docs/adr/: 0001-table-editing-redesign.md  0002-code-block-affordances.md
docs/archive/: README.md  Stack.md  folio-prototype.html  handoff-2026-05-28.md  progress-handoff-2026-05-26.md  vellum-local-first-production-spec-v3.1.md
docs/benchmarks/: baseline.json  baseline.md  markdown-pipeline.json
docs/ports/: agent-harness-runevent.md  agent-harness-runevent.patch
docs/test-runs/: 2026-06-13-production-readiness.md
scripts/: measure-memory.sh  setup-dev-signing.sh
src/: main.tsx  reactScanInit.ts  vite-env.d.ts
src-tauri/: .env.release.example  .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/entitlements/: runtime.plist
src-tauri/fonts/cmu/: LICENSE.md
src-tauri/fonts/lmroman/: LICENSE.md
src-tauri/icons/: icon.icns
src-tauri/packaging/homebrew-prep/: README.md  build.sh
src-tauri/packaging/homebrew-prep/scripts/: postinstall
src-tauri/scripts/: build-release.sh  fetch-runtime.sh  install-homebrew.sh  make-update-manifest.sh
src-tauri/src/: bundled_runtime.rs  data_reset.rs  default_handler.rs  events.rs  external.rs  lib.rs  main.rs  open_with.rs  profile_migration.rs  windows.rs
src-tauri/src/bob/: chat_event.rs  locator.rs  mod.rs  runner.rs
src-tauri/src/db/: conversations.rs  history.rs  mod.rs  snapshot.rs  trash.rs
src-tauri/src/export/: fonts.rs  html.rs  mermaid.rs  mod.rs  paged.rs  pdf.rs  print.rs
src-tauri/src/files/: clone.rs  diff.rs  icloud.rs  ipc_tests.rs  mod.rs  starter.rs  trash.rs  trash_sweep.rs  watcher.rs  watcher_fs_tests.rs
src-tauri/src/harness/: chat_event.rs  commands.rs  credentials.rs  custom.rs  custom_commands.rs  input_spill.rs  mod.rs  model_manager.rs  ollama_runtime.rs  orphan_runs.rs  registry.rs  run_mode.rs  runner.rs  verify.rs
src-tauri/src/index/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/review/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/system/: commands.rs  detect.rs  elevate.rs  install.rs  mod.rs  recipe.rs
src-tauri/src/workspace/: mod.rs
src/app/: App.tsx  AppRouter.tsx  AppShell.tsx  MainApp.tsx  SplashScreen.tsx  agentEditWindow.test.ts  agentEditWindow.ts  seedWorkspace.ts  useSaveOnExit.ts  useWorkspaceLinkTargets.ts  workspaceModel.test.ts  workspaceModel.ts  workspaceStore.test.ts  workspaceStore.ts
src/app/store/: activeWorkspace.ts  chatAskSelection.ts  chatInputSpill.test.ts  chatInputSpill.ts  chatSend.ts  chatSlice.ts  commentsSlice.ts  conversationsHelpers.ts  conversationsSlice.ts  fileContextContent.ts  filesSlice.ts  fsEventsSlice.ts  harnessConfig.ts  harnessStore.ts  indexStore.ts  initialPrefs.ts  internals.test.ts  internals.ts  lifecycleSlice.ts  looseFilesSlice.test.ts  looseFilesSlice.ts  navSlice.ts  navigation.test.ts  navigation.ts  onboardingSlice.ts  persistence.ts  reviewFlow.ts  runEvents.ts  runPersist.ts  systemStore.ts  types.ts  uiStore.ts  updaterStore.ts
src/features/benchmark/: cmEditorLoad.baseline.spec.ts  commentOperations.ts  documentFixtures.test.ts  documentFixtures.ts  lagBenchmark.baseline.spec.ts  lagBenchmark.ts  markdownPipelineLatency.baseline.spec.ts  measure.ts  operationResult.ts  reportWriter.test.ts  reportWriter.ts  statistics.test.ts  statistics.ts  textOperations.ts  tiptapSetContent.baseline.spec.ts  typingLatency.baseline.spec.ts
src/features/chat/: AgentTrace.tsx  AllConversationsView.test.tsx  AllConversationsView.tsx  AppliedChanges.test.tsx  AppliedChanges.tsx  AssistantPicker.test.tsx  AssistantPicker.tsx  ChatComposerFooter.test.tsx  ChatComposerFooter.tsx  ChatEmptyState.test.tsx  ChatEmptyState.tsx  ChatErrorNotice.test.tsx  ChatErrorNotice.tsx  ChatHarnessPicker.test.tsx  ChatHarnessPicker.tsx  ChatMessageList.test.tsx  ChatMessageList.tsx  ChatPanel.tsx  ChatRegion.tsx  ConversationActionsMenu.tsx  ConversationDeleteToast.tsx  ConversationHistoryMenu.tsx  ConversationListRow.tsx  ConversationTitleEditor.tsx  ExcerptCard.test.tsx  ExcerptCard.tsx  FileOpCard.tsx  FooterMenu.tsx  MarkdownMessage.tsx  MessageAuthor.tsx  MessageComposer.test.tsx  MessageComposer.tsx  MessageRow.tsx  SidebarChatList.tsx  SuggestionList.tsx  excerptPreamble.ts  (+14 more)
src/styles/: global.scss
src/workers/: markdown.worker.ts  markdownPipeline.test.ts  markdownPipeline.ts
(+195 files in other folders)
