[workspace]
resolver = "2"
members = [
  "crates/workspace-index",
  "crates/workspace-index-wasm",
  "src-tauri",
]

# A smaller release binary loads faster off cold disk (dyld) and validates its
# code signature faster on a freshly-installed build — which is where the slow
# *first* launch goes (measured: ~600ms of the cold launch is just loading the
# 25 MB unstripped binary; warm relaunch is ~20ms). Thin LTO + stripped symbols
# roughly halve it. opt-level stays at the default 3 so Rust hot paths (search
# index, markdown render) aren't slowed, and panics still unwind (Tauri command
# isolation), so this trades only build time for size.
[profile.release]
lto = "thin"
strip = true
