[package]
name = "compose"
version = "0.1.0"
description = "Compose — local-first AI writing workspace"
authors = ["Compose contributors"]
edition = "2021"
# The desktop application host — not published to crates.io.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "compose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
# The harness layer — an external crate family published to crates.io
# (repo: https://github.com/getlatentic/agent-harness).
# `bob-rs` — the unofficial bob SDK (readiness / install / keychain /
# spawn_bob), also consumed by `crates/bob-api` so the two transports run
# identical logic. `agent-harness` (imported as `harness`) — the framework:
# the registry, the Harness trait, RunEvent + request/metadata types, and
# the bob adapter's `normalize_bob_event`.
bob-rs = "0.3"
agent-harness = "0.3"
# Pure markdown index/search core, shared with the browser (WASM). The
# Tauri command scans the disk and calls this; `db::SourceRange` is
# re-exported from it so there is one coordinate type.
workspace-index = { path = "../crates/workspace-index" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3.6.3", features = ["apple-native"] }
notify = "6"
walkdir = "2"
sha2 = "0.10"
# Compresses document-history snapshot blobs (db::snapshot). Already in the
# dependency tree transitively; its default miniz_oxide backend is pure Rust,
# so this adds no native build. The snapshot content hash stays over the
# uncompressed bytes, so compression is invisible to callers.
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
# Used by settings::settings_install_bob to spool the embedded
# install-bob.sh to disk for `bash -l` to exec. Also reused in
# dev-only tests, but the production code path needs it too.
tempfile = "3"

# clonefile(2) for copy-on-write workspace clones in the edit-review gate
# (files::clone). macOS-only; other platforms use the recursive-copy
# fallback and never link libc here.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
