[package]
name = "compose"
version = "0.0.1-alpha.8"
description = "Compose — local-first AI writing workspace"
authors = ["Compose contributors"]
edition = "2021"
publish = false

[lib]
name = "compose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
agent-harness = { version = "0.4.0-alpha.2", features = [
  "acp",
  "openai-compatible",
] }
workspace-index = { path = "../crates/workspace-index" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
security-framework = "3"
notify = "6"
walkdir = "2"
sha2 = "0.10"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
comrak = "0.52"
base64 = "0.22"
pulldown-latex = "0.7.1"
tauri-plugin-aptabase = "1.0.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time", "net"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSURL",
  "NSError",
  "NSFileManager",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
block2 = "0.6"
objc2-web-kit = { version = "0.3", features = [
  "WKWebView",
  "WKWebViewConfiguration",
  "WKPDFConfiguration",
  "WKNavigation",
  "objc2-app-kit",
  "block2",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSPrintInfo",
  "NSPrintOperation",
  "NSResponder",
  "NSWindow",
  "NSView",
  "NSGraphics",
] }
