[package]
name = "compose-harness"
version = "0.1.0"
edition = "2021"
description = "Compose's harness registry over the harness-* adapter crates."

# Compose-specific manager — not a publishable library. It depends on
# the concrete adapter crates and exposes the registry both hosts share.
[lib]

[dependencies]
harness-core = { path = "../harness/core" }
harness-bob = { path = "../harness/bob" }
harness-claude = { path = "../harness/claude" }
harness-codex = { path = "../harness/codex" }
