[package]
name = "workspace-index-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen wrapper exposing the pure workspace-index core (build + search) to the browser."
# Compose-internal; not part of the published harness family.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
workspace-index = { path = "../workspace-index" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The cached wasm-opt predates Rust's now-default bulk-memory ops (`memory.copy`)
# and rejects the module without `--enable-bulk-memory`. This wasm is a few KB
# and only powers the browser-preview search index (the packaged app uses the
# native index), so skip the extra opt pass rather than pin a newer wasm-opt.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
