[package]
name = "harness-bob"
version = "0.1.0"
edition = "2021"
description = "bob CLI harness adapter for harness-core (wraps the bob-core SDK + bob's stream-json parser)."

[lib]

[dependencies]
# The neutral harness contract + subprocess engine.
harness-core = { path = "../core" }
# The unofficial bob SDK — detection, install, keychain, spawn_bob.
bob-core = { path = "../../bob-core" }
serde_json = "1"
