[package]
name = "harness-bob"
version = "0.1.0"
edition = "2021"
description = "bob CLI harness adapter for agent-harness (wraps the bob-rs SDK + bob's stream-json parser)."
license = "MIT OR Apache-2.0"
readme = "README.md"
# repository = "https://github.com/<org>/compose"  # TODO: set when a public git remote exists
keywords = ["bob", "agent", "harness", "cli"]
categories = ["command-line-utilities"]

[lib]

[dependencies]
# The neutral harness contract + subprocess engine.
agent-harness = { path = "../../agent-harness", version = "0.1.0" }
# The unofficial bob SDK — detection, install, keychain, spawn_bob.
bob-rs = { path = "../../bob-rs", version = "0.1.0" }
serde_json = "1"
