[package]
name = "harness-claude"
version = "0.1.0"
edition = "2021"
description = "Claude Code CLI harness adapter for harness-core."

[lib]

[dependencies]
# The neutral harness contract + subprocess engine. Claude Code owns
# its own login, so this adapter needs no bob-core / keychain.
harness-core = { path = "../core" }
serde_json = "1"
