[package]
name = "harness-codex"
version = "0.1.0"
edition = "2021"
description = "OpenAI Codex CLI harness adapter for harness-core."
license = "MIT OR Apache-2.0"
readme = "README.md"
# repository = "https://github.com/<org>/compose"  # TODO: set when a public git remote exists
keywords = ["codex", "agent", "harness", "cli"]
categories = ["command-line-utilities"]

[lib]

[dependencies]
# The neutral harness contract + subprocess engine. Codex owns its own
# login, so this adapter needs no bob-core / keychain.
harness-core = { path = "../core", version = "0.1.0" }
serde_json = "1"
